--- a/SubtitleProject/Views/Home/Index.cshtml
+++ b/SubtitleProject/Views/Home/Index.cshtml
@@ -1,31 +1,44 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<br />
+<br />
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<h2>Upload your file in here :</h2>
+
+<br />
+<br />
+
+<form name="form1" method="post" enctype="multipart/form-data">
+
+    <div>
+        <label for="image1">Upload File : </label>
+        <input name="image1" type="file" />
+    </div>
+    <br />
+    <div>
+        <input type="submit" value="Submit" />
+    </div>
+</form>
+
+<div>
+    <label>Name:</label>
+    <input type="text" ng-model="yourName" placeholder="Enter a name here">
+    <hr>
+    <h1>Hello {{yourName}}!</h1>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+
+@*<div ng-controller="TestCtrl">
+    {{text}}
 </div>
+<script>
+
+
+    angular.module('subProject', [])
+      .controller('TestCtrl', function ($scope) {
+          $scope.text = "Rasika";
+      });
+
+
+</script>*@
